# bazel-rust-proto

./: .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE
project/: Cargo.toml
project/cargo/: BUILD.bazel  crates.bzl
project/cargo/remote/: BUILD.aho-corasick-0.7.20.bazel  BUILD.anyhow-1.0.69.bazel  BUILD.autocfg-1.1.0.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.cc-1.0.79.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.either-1.8.1.bazel  BUILD.errno-0.2.8.bazel  BUILD.errno-dragonfly-0.1.2.bazel  BUILD.fastrand-1.9.0.bazel  BUILD.hashbrown-0.12.3.bazel  BUILD.indexmap-1.9.2.bazel  BUILD.instant-0.1.12.bazel  BUILD.io-lifetimes-1.0.5.bazel  BUILD.libc-0.2.139.bazel  BUILD.linux-raw-sys-0.1.4.bazel  BUILD.log-0.4.17.bazel  BUILD.memchr-2.5.0.bazel  BUILD.once_cell-1.17.1.bazel  BUILD.proc-macro2-1.0.51.bazel  BUILD.protobuf-3.2.0.bazel  BUILD.protobuf-codegen-3.2.0.bazel  BUILD.protobuf-parse-3.2.0.bazel  BUILD.protobuf-support-3.2.0.bazel  BUILD.quote-1.0.23.bazel  BUILD.redox_syscall-0.2.16.bazel  BUILD.regex-1.7.1.bazel  BUILD.regex-syntax-0.6.28.bazel  BUILD.rustix-0.36.8.bazel  BUILD.syn-1.0.109.bazel  BUILD.tempfile-3.4.0.bazel  BUILD.thiserror-1.0.38.bazel  BUILD.thiserror-impl-1.0.38.bazel  BUILD.unicode-ident-1.0.6.bazel  BUILD.unicode-ident-1.0.7.bazel  BUILD.which-4.4.0.bazel  BUILD.winapi-0.3.9.bazel  BUILD.winapi-i686-pc-windows-gnu-0.4.0.bazel  BUILD.winapi-x86_64-pc-windows-gnu-0.4.0.bazel  BUILD.windows-sys-0.42.0.bazel  (+9 more)
project/src/: BUILD  foo.proto  main.rs
